crates/lang/macro/tests/ui/fail/C-13-abi-constructor.stderr
error: ink! constructors must have explicit ABI
  --> $DIR/C-13-abi-constructor.rs:10:13
   |
10 |         pub extern "C" fn abi_constructor() -> Self {
   |             ^^^^^^^^^^
